@@ -808,14 +808,6 @@ method configure () {
         [ ManifestSkip => {} ],
 
         # -- get prereqs
-        [   Prereqs => {    # these are needed but not pulled in by other modules
-                -phase             => 'build',
-                -type              => 'requires',
-                'Test::CPAN::Meta' => 0,
-                'Test::EOL'        => 0,
-                'Test::NoTabs'     => 0
-            }
-        ],
         (   $self->auto_prereqs
             ? [ AutoPrereqs => $self->skip_prereqs ? { skip => $self->skip_prereqs } : {} ]
             : ()
